Corrigindo erros de chamada da API | Configurado page MainCarousel | Configurao page MainScrean | Configurado App.js | Refatorado códigos do arquivo api.js :white_check_mark:

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,8 @@
   <script src=" https://unpkg.com/react-dom/umd/react-dom.production.min.js " crossorigin></script>
 
   <script src=" https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js " crossorigin></script>
+  <!-- Axios -->
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 
 </html>
